// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fUFfaL FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 ccVZeS"
            disabled=""
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fWDTlB FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gpExJn"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        Some input
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 dXxgdw"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fWDTlB FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gpExJn"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fWDTlB FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gpExJn"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 jCZiFB FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gpExJn"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 dGdtNa"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fWDTlB FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 gpExJn"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 gLxcNH"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
